<resources>
    <string name="app_name">nmedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="post_author_avatar" translatable="false">Post author avatar </string>
    <string name="image_button" translatable="false">Image button</string>
    <string name="like_image">Like</string>
    <string name="share_image">Share</string>
    <string name="views_image">Views</string>
    <string name="menu_remove">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="post_text">Post Text</string>
    <string name="description_post_like">Like</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="choose_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="play_video">Play video</string>
    <string name="google_api_unavailable">Google Api Unavailable</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channal_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_text">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="new_posts">New posts</string>
</resources>