<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/common_spacing">


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/post_author_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/posts.json/data/authorAvatar" />

    <TextView
        android:id="@+id/authorTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/publishedTextView"
        app:layout_constraintEnd_toStartOf="@+id/menuImageButton"
        app:layout_constraintStart_toEndOf="@+id/logoImageView"
        app:layout_constraintTop_toTopOf="@+id/logoImageView"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/publishedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@+id/logoImageView"
        app:layout_constraintStart_toEndOf="@id/logoImageView"
        app:layout_constraintTop_toBottomOf="@+id/authorTextView"
        tools:text="@sample/posts.json/data/published" />

    <ImageButton
        android:id="@+id/menuImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:contentDescription="@string/image_button"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_more_vert_24" />



    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierHead"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="authorTextView, publishedTextView, logoImageView" />

    <TextView
        android:id="@+id/contentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrierHead"
        tools:text="@sample/posts.json/data/content" />
    <androidx.constraintlayout.widget.Group
        android:id="@+id/videoGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="videoView, playButton"
        />

    <ImageView
        android:id="@+id/videoView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/netology"
        app:layout_constraintTop_toBottomOf="@+id/contentTextView"
        app:layout_constraintBottom_toTopOf="@+id/likeImageView"
        />

    <ImageButton
        android:id="@+id/playButton"
        app:layout_constraintTop_toTopOf="@+id/videoView"
        app:layout_constraintBottom_toBottomOf="@+id/videoView"
        app:layout_constraintStart_toStartOf="@+id/videoView"
        app:layout_constraintEnd_toEndOf="@+id/videoView"
        android:src="@drawable/ic_play_circle_48"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="contentTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likeImageView"
        style="@style/Widget.AppTheme.LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:checkable="true"
        android:contentDescription="@string/like_image"
        android:textSize="@dimen/icon_text_size"
        app:icon="@drawable/ic_like_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrierContent"
        tools:text="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareImageView"
        style="@style/Widget.AppTheme.ShareCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:checkable="true"
        android:contentDescription="@string/share_image"
        android:textSize="@dimen/icon_text_size"
        app:icon="@drawable/ic_share_24dp"
        app:layout_constraintStart_toEndOf="@id/likeImageView"
        app:layout_constraintTop_toTopOf="@id/barrierContent"
        tools:text="10" />


    <TextView
        android:id="@+id/viewsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrierContent"
        tools:text="50" />

    <ImageView
        android:id="@+id/viewsImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/lower_spacing"
        android:contentDescription="@string/views_image"
        app:layout_constraintEnd_toStartOf="@id/viewsTextView"
        app:layout_constraintTop_toTopOf="@id/barrierContent"
        app:srcCompat="@drawable/ic_baseline_remove_red_eye_24" />

</androidx.constraintlayout.widget.ConstraintLayout>